uninstall by reflect and dynamic proxy